# latency-hiding-rayon-benchmarks

./: .gitignore  Cargo.toml  until_fail
benches/: fib_bench.rs  map_reduce_fib.rs  my_benchmark.rs  old_vs_new_rayon.rs  param_sweep.rs  quicksort.rs  quicksort_bench.rs
plotting/: map_reduce.py  map_reduce_plot.py  overhead.py  overhead_plot.py  param_sweep.py  plot.py
src/: fib.rs  lib.rs  main.rs  map_reduce.rs  quicksort.rs
src/map_reduce/: map_reduce_fib.rs  mod.rs  players.rs
