[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.1"
criterion = "0.3.5"
async-io = "1.6.0"
async-recursion = "1.0.0"
clap = { version = "3.1.3", features = ["derive"] }
rand = "0.8.5"

[patch.crates-io]
rayon = {path = "../rayon"}
# rayon = { git = "https://github.com/rayon-rs/rayon", tag = "v1.5.1" }

[[bench]]
name = "param_sweep"
harness = false
