[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "^1.6.1" # getting criterion and this to work seems to depend on removing the links key in rayon-core/Cargo.toml, this also means criterion uses our version of rayon (cargo tree)
rayon_old = { package = "rayon", git = "https://github.com/rayon-rs/rayon", tag = "v1.5.1" } # pull from git, since we patch regular rayon with crates-io patch
async-io = "1.6.0"
async-recursion = "1.0.0"
clap = { version = "3.1.3", features = ["derive"] }
rand = "0.8.5"
futures = "0.3.21"
pin-utils = "0.1.0"

[dev-dependencies]
criterion = "0.3.5"
num_cpus = "1.13.1"

[patch.crates-io]
rayon = { path = "../rayon" }

[[bench]]
name = "param_sweep"
harness = false

[[bench]]
name = "map_reduce_fib"
harness = false

[[bench]]
name = "quicksort"
harness = false

[[bench]]
name = "old_vs_new_rayon"
harness = false

[profile.custom-profile]
inherits = "release"
debug = true
lto = true
